<package>
<name>detect_dynamic</name>
<version>1.0.0</version>
<description>Detect dyanmic point cloud</description>
<maintainer email="godus@postech.ac.kr">Haeyeon Gim</maintainer>
<license>BSD</license>
<author>Haeyeon Gim</author>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>tf</build_depend>
<run_depend>tf</run_depend>
<build_depend>roscpp</build_depend>
<run_depend>roscpp</run_depend>
<build_depend>visualization_msgs</build_depend>
<run_depend>visualization_msgs</run_depend>
<build_depend>std_msgs</build_depend>
<run_depend>std_msgs</run_depend>
<build_depend>geometry_msgs</build_depend>
<run_depend>geometry_msgs</run_depend>
<build_depend>sensor_msgs</build_depend>
<run_depend>sensor_msgs</run_depend>
<build_depend>pcl_ros</build_depend>
<run_depend>pcl_ros</run_depend>
<build_depend>pcl_conversions</build_depend>
<run_depend>pcl_conversions</run_depend>
</package>